# Patient-Following-Robot-with-LLM-and-SLAM-Module

./: README.md
turtlebot3_ws/install/: local_setup.sh  setup.sh
turtlebot3_ws/install/dynamixel_sdk/include/dynamixel_sdk/: dynamixel_sdk.h  group_bulk_read.h  group_bulk_write.h  group_fast_bulk_read.h  group_fast_sync_read.h  group_handler.h  group_sync_read.h  group_sync_write.h  packet_handler.h  port_handler.h  port_handler_arduino.h  port_handler_linux.h  port_handler_mac.h  port_handler_windows.h  protocol1_packet_handler.h  protocol2_packet_handler.h
turtlebot3_ws/install/dynamixel_sdk/share/dynamixel_sdk/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
turtlebot3_ws/install/dynamixel_sdk_custom_interfaces/share/dynamixel_sdk_custom_interfaces/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
turtlebot3_ws/install/dynamixel_sdk_examples/lib/dynamixel_sdk_examples/: read_write_node  read_write_node.py
turtlebot3_ws/log/: latest_build
turtlebot3_ws/src/: phi3_intent.py
turtlebot3_ws/src/map stuff/: map.pgm  map.yaml
turtlebot3_ws/src/smart_brain/: package.xml  setup.cfg  setup.py
turtlebot3_ws/src/smart_brain/config/: burger_cam.yaml  map_locations.yaml
turtlebot3_ws/src/smart_brain/launch/: burger_cam_nav2.launch.py
turtlebot3_ws/src/smart_brain/smart_brain/: integrated_navigator.py  send_goal.py
turtlebot3_ws/src/yolo_pkg/: package.xml  setup.py  yolo_detector.py
turtlebot3_ws/src/yolo_pkg/yolo_pkg/: yolo_detector.py
(+794 files in other folders)
