<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>yolo_pkg</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="kaize@todo.todo">kaize</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  
  <depend>sensor_msgs</depend>         
  <depend>cv_bridge</depend>           
  <exec_depend>python3-ultralytics</exec_depend> 
  <exec_depend>python3-opencv</exec_depend>      

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
